[gd_scene load_steps=9 format=3 uid="uid://bkkpxi4hgms2s"]

[ext_resource type="PackedScene" uid="uid://dex411h3uxv4p" path="res://Scenes/tile_map.tscn" id="1_107gr"]
[ext_resource type="PackedScene" uid="uid://bqrle72dvy606" path="res://GUI/hearts_container.tscn" id="1_lwpvg"]
[ext_resource type="Script" path="res://Scenes/Forest.gd" id="1_rnhfi"]
[ext_resource type="PackedScene" uid="uid://cgw2vi154n3y4" path="res://Enemies/slime.tscn" id="2_volvb"]
[ext_resource type="PackedScene" uid="uid://cdy6mx4d0w0lh" path="res://Player/player.tscn" id="3_y6qb0"]
[ext_resource type="Script" path="res://Scenes/Follow_Camera.gd" id="5_sg2ob"]
[ext_resource type="Script" path="res://Scenes/change_map.gd" id="7_g3yi8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbprf"]
size = Vector2(48, 16)

[node name="Forest" type="Node2D"]
script = ExtResource("1_rnhfi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartsContainer" parent="CanvasLayer" instance=ExtResource("1_lwpvg")]
offset_right = 3.0
offset_bottom = 3.0

[node name="TileMap" parent="." instance=ExtResource("1_107gr")]
layer_0/tile_data = PackedInt32Array(0, 720896, 12, 65536, 720896, 12, 131072, 851968, 12, 196608, 786432, 12, 262144, 720896, 12, 327680, 720896, 12, 393216, 917504, 12, 458752, 720896, 12, 524288, 720896, 12, 589824, 720896, 12, 655360, 720896, 12, 720896, 720896, 12, 786432, 720896, 12, 851968, 786432, 12, 1, 720896, 12, 65537, 720896, 12, 131073, 720896, 12, 196609, 786432, 12, 262145, 720896, 12, 327681, 720896, 12, 393217, 720896, 12, 458753, 720896, 12, 524289, 720896, 12, 589825, 720896, 12, 655361, 720896, 12, 720897, 720896, 12, 786433, 720896, 12, 851969, 983040, 12, 2, 720896, 8, 65538, 720896, 8, 131074, 720896, 8, 196610, 720896, 8, 262146, 720896, 8, 327682, 720896, 8, 393218, 720896, 9, 458754, 720896, 12, 524290, 720896, 12, 589826, 720896, 12, 655362, 786432, 12, 720898, 720896, 12, 786434, 720896, 12, 851970, 720896, 12, 3, 786432, 8, 65539, 786432, 8, 131075, 786432, 8, 196611, 786432, 8, 262147, 786432, 8, 327683, 786432, 8, 393219, 786432, 9, 458755, 720896, 12, 524291, 917504, 12, 589827, 851968, 12, 655363, 720896, 12, 720899, 720896, 12, 786435, 917504, 12, 851971, 720896, 12, 4, 851968, 8, 65540, 851968, 8, 131076, 851968, 8, 196612, 851968, 8, 262148, 1048576, 9, 327684, 786432, 8, 393220, 786432, 9, 458756, 720896, 12, 524292, 851968, 12, 589828, 720896, 12, 655364, 720896, 12, 720900, 720896, 12, 786436, 720896, 12, 851972, 786432, 12, 5, 720896, 12, 65541, 720896, 12, 131077, 720896, 12, 196613, 983040, 12, 262149, 786432, 7, 327685, 786432, 8, 393221, 786432, 9, 458757, 720896, 12, 524293, 720896, 12, 589829, 720896, 12, 655365, 720896, 12, 720901, 720896, 12, 786437, 720896, 12, 851973, 720896, 12, 6, 720896, 12, 65542, 720896, 12, 131078, 720896, 12, 196614, 720896, 12, 262150, 786432, 7, 327686, 786432, 8, 393222, 786432, 9, 458758, 720896, 12, 524294, 720896, 12, 589830, 720896, 12, 655366, 720896, 12, 720902, 720896, 12, 786438, 720896, 12, 851974, 917504, 12, 7, 720896, 12, 65543, 720896, 12, 131079, 720896, 12, 196615, 720896, 12, 262151, 786432, 7, 327687, 786432, 8, 393223, 786432, 9, 458759, 720896, 12, 524295, 720896, 12, 589831, 720896, 12, 655367, 786432, 12, 720903, 720896, 12, 786439, 720896, 12, 851975, 720896, 12, 8, 720896, 12, 65544, 720896, 12, 131080, 917504, 12, 196616, 720896, 12, 262152, 786432, 7, 327688, 786432, 8, 393224, 786432, 9, 458760, 720896, 12, 524296, 720896, 12, 589832, 720896, 12, 655368, 720896, 12, 720904, 720896, 12, 786440, 720896, 12, 851976, 720896, 12, 9, 720896, 12, 65545, 720896, 12, 131081, 720896, 12, 196617, 720896, 7, 262153, 1114112, 9, 327689, 786432, 8, 393225, 786432, 9, 458761, 720896, 12, 524297, 720896, 12, 589833, 851968, 12, 655369, 720896, 12, 720905, 720896, 12, 786441, 720896, 12, 851977, 851968, 12, 10, 720896, 12, 65546, 720896, 12, 131082, 720896, 7, 196618, 1114112, 9, 262154, 786432, 8, 327690, 1048576, 8, 393226, 851968, 9, 458762, 720896, 12, 524298, 720896, 12, 589834, 720896, 12, 655370, 720896, 12, 720906, 720896, 12, 786442, 720896, 12, 851978, 720896, 12, 11, 720896, 12, 65547, 720896, 12, 131083, 786432, 7, 196619, 786432, 8, 262155, 1048576, 8, 327691, 851968, 9, 393227, 720896, 12, 458763, 720896, 12, 524299, 720896, 12, 589835, 720896, 12, 655371, 720896, 12, 720907, 786432, 12, 786443, 720896, 12, 851979, 720896, 12, 12, 720896, 12, 65548, 720896, 12, 131084, 786432, 7, 196620, 786432, 8, 262156, 786432, 9, 327692, 720896, 12, 393228, 720896, 12, 458764, 720896, 12, 524300, 786432, 12, 589836, 917504, 12, 655372, 720896, 12, 720908, 720896, 12, 786444, 720896, 12, 851980, 720896, 12, 13, 720896, 12, 65549, 720896, 12, 131085, 786432, 7, 196621, 786432, 8, 262157, 786432, 9, 327693, 720896, 12, 393229, 720896, 12, 458765, 720896, 12, 524301, 720896, 12, 589837, 786432, 12, 655373, 720896, 12, 720909, 720896, 12, 786445, 720896, 12, 851981, 720896, 12, 14, 851968, 12, 65550, 720896, 12, 131086, 786432, 7, 196622, 786432, 8, 262158, 786432, 9, 327694, 720896, 12, 393230, 720896, 12, 458766, 720896, 12, 524302, 720896, 12, 589838, 983040, 12, 655374, 720896, 12, 720910, 720896, 12, 786446, 720896, 12, 851982, 851968, 12, 15, 720896, 12, 65551, 786432, 12, 131087, 786432, 7, 196623, 786432, 8, 262159, 1114112, 8, 327695, 720896, 8, 393231, 720896, 8, 458767, 720896, 8, 524303, 720896, 8, 589839, 720896, 8, 655375, 720896, 9, 720911, 720896, 12, 786447, 720896, 12, 851983, 720896, 12, 16, 720896, 12, 65552, 720896, 12, 131088, 786432, 7, 196624, 786432, 8, 262160, 786432, 8, 327696, 786432, 8, 393232, 786432, 8, 458768, 786432, 8, 524304, 786432, 8, 589840, 786432, 8, 655376, 786432, 9, 720912, 720896, 12, 786448, 720896, 12, 851984, 786432, 12, 17, 720896, 12, 65553, 720896, 12, 131089, 851968, 7, 196625, 851968, 8, 262161, 851968, 8, 327697, 851968, 8, 393233, 851968, 8, 458769, 851968, 8, 524305, 1048576, 9, 589841, 786432, 8, 655377, 786432, 9, 720913, 786432, 12, 786449, 720896, 12, 851985, 720896, 12, 18, 720896, 12, 65554, 720896, 12, 131090, 720896, 12, 196626, 720896, 12, 262162, 720896, 12, 327698, 720896, 12, 393234, 917504, 12, 458770, 720896, 12, 524306, 786432, 7, 589842, 786432, 8, 655378, 786432, 9, 720914, 720896, 12, 786450, 786432, 12, 851986, 983040, 12, 19, 720896, 12, 65555, 720896, 12, 131091, 720896, 12, 196627, 720896, 12, 262163, 720896, 12, 327699, 720896, 12, 393235, 720896, 12, 458771, 917504, 12, 524307, 786432, 7, 589843, 786432, 8, 655379, 786432, 9, 720915, 720896, 12, 786451, 720896, 12, 851987, 983040, 12, 20, 720896, 12, 65556, 720896, 12, 131092, 720896, 12, 196628, 720896, 12, 262164, 786432, 12, 327700, 720896, 12, 393236, 720896, 12, 458772, 720896, 12, 524308, 786432, 7, 589844, 786432, 8, 655380, 786432, 9, 720916, 720896, 12, 786452, 720896, 12, 851988, 720896, 12, 21, 720896, 12, 65557, 720896, 12, 131093, 720896, 12, 196629, 720896, 12, 262165, 917504, 12, 327701, 720896, 12, 393237, 851968, 12, 458773, 983040, 12, 524309, 786432, 7, 589845, 786432, 8, 655381, 786432, 9, 720917, 720896, 12, 786453, 917504, 12, 851989, 720896, 12, 22, 917504, 12, 65558, 720896, 12, 131094, 983040, 12, 196630, 720896, 12, 262166, 720896, 12, 327702, 720896, 12, 393238, 720896, 12, 458774, 720896, 12, 524310, 786432, 7, 589846, 786432, 8, 655382, 786432, 9, 720918, 720896, 12, 786454, 720896, 12, 851990, 720896, 12, 23, 720896, 12, 65559, 720896, 12, 131095, 720896, 12, 196631, 720896, 12, 262167, 720896, 12, 327703, 786432, 12, 393239, 720896, 12, 458775, 720896, 12, 524311, 786432, 7, 589847, 786432, 8, 655383, 786432, 9, 720919, 917504, 12, 786455, 720896, 12, 851991, 720896, 12, 24, 720896, 12, 65560, 720896, 12, 131096, 720896, 12, 196632, 917504, 12, 262168, 720896, 12, 327704, 720896, 12, 393240, 917504, 12, 458776, 720896, 12, 524312, 786432, 7, 589848, 786432, 8, 655384, 786432, 9, 720920, 720896, 12, 786456, 720896, 12, 851992, 720896, 12, 25, 720896, 12, 65561, 720896, 12, 131097, 720896, 12, 196633, 720896, 12, 262169, 720896, 12, 327705, 720896, 12, 393241, 720896, 12, 458777, 720896, 12, 524313, 786432, 7, 589849, 786432, 8, 655385, 786432, 9, 720921, 720896, 12, 786457, 720896, 12, 851993, 720896, 12, 26, 720896, 12, 65562, 851968, 12, 131098, 720896, 12, 196634, 720896, 12, 262170, 720896, 12, 327706, 720896, 12, 393242, 720896, 12, 458778, 720896, 12, 524314, 786432, 7, 589850, 786432, 8, 655386, 786432, 9, 720922, 720896, 12, 786458, 720896, 12, 851994, 720896, 12, 27, 720896, 12, 65563, 720896, 12, 131099, 720896, 12, 196635, 917504, 12, 262171, 720896, 12, 327707, 720896, 12, 393243, 720896, 12, 458779, 917504, 12, 524315, 786432, 7, 589851, 786432, 8, 655387, 786432, 9, 720923, 720896, 12, 786459, 786432, 12, 851995, 720896, 12, 28, 720896, 12, 65564, 720896, 12, 131100, 720896, 12, 196636, 720896, 12, 262172, 720896, 12, 327708, 720896, 12, 393244, 720896, 12, 458780, 720896, 12, 524316, 786432, 7, 589852, 786432, 8, 655388, 786432, 9, 720924, 720896, 12, 786460, 720896, 12, 851996, 720896, 12, 29, 851968, 12, 65565, 720896, 12, 131101, 786432, 12, 196637, 720896, 12, 262173, 720896, 12, 327709, 720896, 12, 393245, 720896, 12, 458781, 720896, 12, 524317, 786432, 7, 589853, 786432, 8, 655389, 786432, 9, 720925, 786432, 12, 786461, 720896, 12, 851997, 786432, 12, 30, 720896, 12, 65566, 720896, 12, 131102, 720896, 12, 196638, 720896, 12, 262174, 720896, 12, 327710, 851968, 12, 393246, 720896, 12, 458782, 720896, 12, 524318, 851968, 7, 589854, 851968, 8, 655390, 851968, 9, 720926, 720896, 12, 786462, 720896, 12, 851998, 720896, 12, 31, 720896, 12, 65567, 720896, 12, 131103, 720896, 12, 196639, 720896, 12, 262175, 720896, 12, 327711, 720896, 12, 393247, 720896, 12, 458783, 720896, 12, 524319, 720896, 12, 589855, 720896, 12, 655391, 720896, 12, 720927, 720896, 12, 786463, 720896, 12, 851999, 786432, 12)

[node name="Borders" parent="." instance=ExtResource("1_107gr")]
layer_3/tile_data = PackedInt32Array(-1, 720896, 5, -65536, 720896, 5, -65535, 720896, 5, -131071, 720896, 5, -131070, 720896, 5, -131069, 720896, 5, -131068, 720896, 5, -131067, 720896, 5, -65531, 720896, 5, -65530, 720896, 5, -65529, 720896, 5, -65528, 720896, 5, -65527, 720896, 5, -65526, 720896, 5, -65525, 720896, 5, -65524, 720896, 5, -65523, 720896, 5, -65522, 720896, 5, -65521, 720896, 5, -65520, 720896, 5, -65519, 720896, 5, -65518, 720896, 5, -65517, 720896, 5, -65516, 720896, 5, -65515, 720896, 5, -65514, 720896, 5, -65513, 720896, 5, -65512, 720896, 5, -65511, 720896, 5, -65510, 720896, 5, -65509, 720896, 5, -65508, 720896, 5, -65507, 720896, 5, -65506, 720896, 5, -65505, 720896, 5, -65504, 720896, 5, 32, 720896, 5, 65568, 720896, 5, 131104, 720896, 5, 196640, 720896, 5, 262176, 720896, 5, 327712, 720896, 5, 393248, 720896, 5, 458784, 720896, 5, 524320, 720896, 5, 589856, 720896, 5, 655392, 720896, 5, 720928, 720896, 5, 786464, 720896, 5, 852000, 720896, 5, 917536, 720896, 5, 917535, 720896, 5, 917534, 720896, 5, 917533, 720896, 5, 917532, 720896, 5, 917531, 720896, 5, 917530, 720896, 5, 917529, 720896, 5, 917528, 720896, 5, 917527, 720896, 5, 917526, 720896, 5, 917525, 720896, 5, 917524, 720896, 5, 917523, 720896, 5, 917522, 720896, 5, 917521, 720896, 5, 917520, 720896, 5, 917519, 720896, 5, 917518, 720896, 5, 917517, 720896, 5, 917516, 720896, 5, 917515, 720896, 5, 917514, 720896, 5, 917513, 720896, 5, 917512, 720896, 5, 917511, 720896, 5, 917510, 720896, 5, 917509, 720896, 5, 917508, 720896, 5, 917507, 720896, 5, 917506, 720896, 5, 917505, 720896, 5, 917504, 720896, 5, 983039, 720896, 5, 65535, 720896, 5, 131071, 720896, 5, 196607, 720896, 5, 262143, 720896, 5, 327679, 720896, 5, 393215, 720896, 5, 458751, 720896, 5, 524287, 720896, 5, 589823, 720896, 5, 655359, 720896, 5, 720895, 720896, 5, 786431, 720896, 5, 851967, 720896, 5, 917503, 720896, 5)

[node name="Slime" parent="." node_paths=PackedStringArray("endMarker") instance=ExtResource("2_volvb")]
position = Vector2(128, 176)
endMarker = NodePath("Marker2D")

[node name="Marker2D" type="Marker2D" parent="Slime"]
position = Vector2(160, 32)

[node name="Player" parent="." instance=ExtResource("3_y6qb0")]
position = Vector2(136, 112)

[node name="Follow Camera" type="Camera2D" parent="Player" node_paths=PackedStringArray("tileMap")]
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 480
script = ExtResource("5_sg2ob")
tileMap = NodePath("../../TileMap")

[node name="GoToStartArea" type="Area2D" parent="."]
script = ExtResource("7_g3yi8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoToStartArea"]
position = Vector2(56, -8)
shape = SubResource("RectangleShape2D_cbprf")

[connection signal="body_entered" from="GoToStartArea" to="GoToStartArea" method="_on_body_entered"]
[connection signal="body_exited" from="GoToStartArea" to="GoToStartArea" method="_on_body_exited"]
